# darwin

./: Cargo.toml  readme.md
.github/: copilot-instructions.md
docs/: review.md
examples/: basic.rs
examples/sample/: crossover.rs  generator.rs  mutator.rs
src/: config.rs  context.rs  epoch.rs  gen_info.rs  genome.rs  lib.rs  methods.rs  pool.rs  pools.rs  sigma.rs  traits.rs
src/ga/: config.rs  context.rs  evolution.rs  genome.rs  methods.rs  mod.rs  pool.rs  pools.rs  sigma.rs
src/ga/evolution/: config.rs  context.rs  crossover.rs  default_evolution.rs  evolver.rs  generator.rs  mod.rs  mutator.rs  sigma.rs
src/individual/: lineage.rs  methods.rs  mod.rs  traits.rs
tests/: basic.rs
tests/sample/: crossover.rs  generator.rs  mod.rs  mutator.rs
